tests/src/frontend/typechecking/invalid/general_constraint_clause_8.sk
base class P<+T>
base class L<+T> extends P<T>

class Tester<T>() {
  fun no<U>[mutable Ref<L<T>>: mutable Ref<P<U>>](x: T): U {
    x
  }
}
